SERVER-46604 Fix destruction order of ThreadPool in OCSPCache